--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -46,7 +46,10 @@
 
 .promo__button {
   width: 129px;
+  height: 36px;
   outline: none;
+  box-shadow: none;
+  border: 1px solid #fff;
   border-radius: 5px;
   background-color: transparent;
   color: #FFF;
