--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -40,6 +40,11 @@
   border-bottom: 1px solid #E8E8E8;
 }
 
+.portfolio__link:hover{
+  cursor: pointer;
+  opacity: 70%;
+}
+
 .portfolio__link:last-of-type {
   border-bottom: unset;
 }
