--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,74 +1,64 @@
 .about-me {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-self: stretch;
   padding: 110px 70px 100px;
 }
 
 .about-me__title {
-  font-style: normal;
+  display: flex;
   font-weight: normal;
   font-size: 22px;
   line-height: 27px;
   margin: 0;
-  color: #000;
   padding-bottom: 23px;
   border-bottom: 1px solid #000;
-  
 }
 
-.about-me__container {
-  display: grid;
-  grid-template-areas: 'name photo'
-                       'text photo'
-                       'story photo' 
-                       'social photo'; 
-  grid-template-columns: 600px 270px;
-  column-gap: 270px;
-  margin: 66px 0 0 0;
+.about-me__info-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: flex-start;
+  margin-top: 66px;
+}
+
+.about-me__info{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
 }
 
 .about-me__name {
+  display: flex;
   margin: 0;
-  font-style: normal;
   font-weight: normal;
   font-size: 50px;
   line-height: 58px;
-  grid-area: name;
-}
-
-.about-me__photo {
-  width: 270px;
-  height: 327px;
-  object-fit: cover;
-  box-sizing: border-box;
-  border-radius: 10px;
-  align-self: flex-end;
-  grid-area: photo;
 }
 
 .about-me__text {
   margin: 18px 0 0 0;
-  font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 20px;
-  grid-area: text;
 }
 
-.about-me__story {
-  font-style: normal;
+.about-me__story{
+  max-width: 600px;
+  height: 88px;
   font-weight: normal;
   font-size: 14px;
   line-height: 22px;
   margin: 26px 0 0 0;
-  grid-area: story;
 }
 
 .about-me__social {
   display: flex;
-  grid-area: social;
   padding: 0;
-  margin: 99px 0 0 0;
+  margin: 99px 0 auto;
 }
 
 .about-me__social-item {
@@ -84,23 +74,24 @@
   margin-right: 20px;
 }
 
-.about-me__social-item-link {
+.about-me__link {
   text-decoration: none;
   color: #000;
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
 }
 
+.about-me__photo {
+  width: 270px;
+  height: 327px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 @media screen and (max-width: 768px){
   .about-me{
     padding: 90px 50px;
-  }
-
-  .about-me__container{
-    grid-template-columns: 364px 255px;
-    column-gap: 50px;
   }
 
   .about-me__name{
@@ -109,18 +100,71 @@
   }
 
   .about-me__text{
+    margin: 16px 0 0 0;
     font-size: 12px;
     line-height: 18px;
   }
 
   .about-me__story{
+    margin: 20px 0 0 0;
+    max-width: 364px;
     font-size: 12px;
     line-height: 18px;
+    height: 108px;
   }
 
   .about-me__photo{
     width: 255px;
     height: 307px;
     margin: 0;
+  }
+
+  .about-me__social{
+    margin: 87px 0 auto;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+  .about-me{
+    padding: 70px 14px;
+  }
+
+  .about-me__title{
+    padding-bottom: 28px;
+  }
+
+  .about-me__info-container{
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    padding-top: 60px;
+    margin: 0;
+  }
+
+  .about-me__photo{
+    width: 292px;
+    height: 352px;
+  }
+
+  .about-me__name{
+    padding-top: 40px;
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  .about-me__text{
+    margin-top: 20px;
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .about-me__story{
+    font-size: 11px;
+    line-height: 16px;
+    height: 112px;
+  }
+
+  .about-me__social{
+    margin-top: 40px;
   }
 }
