--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,8 +1,7 @@
 .about-project {
   display: flex;
   flex-direction: column;
-  margin: 110px 70px;
-  font-family: 'Inter';
+  padding: 110px 70px;
 }
 
 .about-project__title {
@@ -19,12 +18,10 @@
 .about-project__info {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: space-between;
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
-  padding-top: 70px;
+  padding: 70px 0 110px;
 }
 
 .about-project__text-box {
@@ -45,7 +42,7 @@
   justify-content: flex-start;
   box-sizing: border-box;
   text-align: left;
-  width: 50%;
+  max-width: 550px;
   height: auto;
   margin: 0;
 }
@@ -56,6 +53,7 @@
   font-weight: normal;
   margin: 0;
   margin-bottom: 26px;
+  width: 550px;
 }
 
 .about-project__text {
@@ -63,6 +61,7 @@
   line-height: 20px;
   font-weight: normal;
   margin: 0;
+  width: 550px;
 }
 
 .about-project__progress {
@@ -71,7 +70,6 @@
   align-items: flex-start;
   justify-content: space-between;
   margin: 0;
-  margin-top: 110px;
   width: 100%;
   height: 72px;
   box-sizing: border-box;
@@ -82,7 +80,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 25%;
   box-sizing: border-box;
   margin: 0;
 }
@@ -92,7 +89,7 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  width: 100%;
+  width: 228px;
   padding-bottom: 14px;
   color: #A0A0A0;
   background-color: unset;
@@ -109,7 +106,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 75%;
+  width: 912px;
   box-sizing: border-box;
   margin: 0;
 }
@@ -134,4 +131,89 @@
 .about-project__progress-item__padding {
   padding-top: 14px;
   padding-bottom: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px){
+  .about-project__subtitle{
+    max-width: 319px;
+  }
+
+  .about-project__text{
+    max-width: 319px;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .about-project{
+    padding: 90px 50px;
+  }
+
+  .about-project__info{
+    align-items: center;
+    padding: 70px 0 93px;
+  }
+
+  .about-project__text-info{
+    max-width: 319px;
+  }
+
+  .about-project__subtitle{
+    width: 319px;
+  }
+
+  .about-project__text{
+    width: 319px;
+  }
+  
+  .about-project__progress-item_backend{
+    width: 140px;
+  }
+
+  .about-project__progress-item_frontend{
+    width: 528px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px){
+  .about-project{
+    padding: 70px 18px;
+  }
+
+  .about-project__title{
+    padding-bottom: 28px;
+  }
+
+  .about-project__subtitle{
+    width: 284px;
+  }
+
+  .about-project__text{
+    width: 284px;
+    padding-top: 16px;
+  }
+
+  .about-project__progress-item_backend{
+    width: 100px;
+  }
+
+  .about-project__progress-item_frontend{
+    width: 184px;
+  }
+
+  .about-project__text-box{
+    flex-direction: column;
+  }
+
+  .about-project__info{
+    padding: 0;
+    padding-bottom: 60px;
+  }
+
+  .about-project__text-info{
+    padding-top: 60px;
+  }
+
+  .about-project__text-info:last-of-type{
+    padding-top: 56px;
+  }
 }
