--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -61,3 +61,47 @@
   text-decoration: none;
   color: #000;
 }
+
+@media screen and (max-width: 768px){
+  .footer {
+    padding: 79px 30px 20px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .footer{
+    padding: 79px 0 0;
+  }
+
+  .footer__title{
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .footer__menu{
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer__year{
+    font-size: 12px;
+    line-height: 15px;
+    color: #A0A0A0;
+    margin-top: 30px;
+  }
+
+  .footer__links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer__links-item{
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 12px;
+    margin-right: 0;
+  }
+}
