--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,37 @@
-.header {
-  display: flex;
-  justify-content: space-between;
+.header{
   padding: 18px 70px;
   background-color: #073042;
+  margin: 0 auto;
 }
 
 .header_white{
  background-color: #FFF;
 }
 
-.header__logo{
-  cursor: pointer;
+.header__container{
+  max-width: 1280px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0 auto;
+  height: 38px;
 }
 
-.header__button-register{
+.header__packet{
+  display: flex;
+  align-items: center;
+}
+
+.header__logo{
+  cursor: pointer;
+  margin: 18px 0;
+}
+
+.header__signin-text{
   outline: none;
   border: none;
   background-color: transparent;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -25,22 +39,20 @@
   margin-right: 30px;
 }
 
-.header__button-login {
+.header__signin-btn{
   background-color: #2BE080;
   color: #000;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
   border: none;
   border-radius: 5px;
-  height: 32px;
-  padding-left: 20px;
-  padding-right: 20px;
+  height: 24px;
+  padding: 8px 20px 0;
 }
 
-.header__button-login:hover {
+.header__signin-btn:hover {
   opacity: 80%;
   cursor: pointer;
 }
@@ -54,4 +66,27 @@
 .header__link:hover{
   cursor: pointer;
   opacity: 70%;
+}
+
+@media screen and (max-width: 768px){
+  .header{
+    padding: 18px 30px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .header{
+    padding: 14px 18px;
+  }
+
+  .header__signin-btn{
+    height: 18px;
+    font-size: 10px;
+  }
+
+  .header__signin-text{
+    width: 64px;
+    height: 19px;
+    font-size: 10px;
+  }
 }
