--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -55,6 +55,32 @@
 }
 
 .moviesCard__image{
-  width: 364px;
+  width: 100%;
   height: 203px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .moviesCard{
+    width: 339px;
+    margin: 0 auto;
+  }
+
+  .moviesCard__image{
+    height: 190px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .moviesCard{
+    width: 300;
+    margin: 0 auto;
+  }
+
+  .moviesCard__image{
+    height: 168px;
+  }
+
+  .moviesCard__title{
+    text-overflow: ellipsis;
+  }
 }
