--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -9,17 +9,22 @@
   padding: 70px 0 30px;
   box-sizing: border-box;
   width: 100%;
-  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .movies-list{
-    max-width: 768px;
+    max-width: 708px;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 24px;
+    padding: 70px 0 30px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .movies-list{
-    max-width: 320px;
+    max-width: 300px;
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 16px;
+    padding: 40px 0 30px;
   }
 }
