--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -44,10 +44,65 @@
   margin: 0;
 }
 
-
-
 .promo__logo {
   padding-left: 190px;
   width: 310px;
   height: 304px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .promo{
+    flex-direction: column;
+    padding-bottom: 76px;
+  }
+
+  .promo__info{
+  align-items: center;
+  justify-content: center;
+}
+
+  .promo__logo{
+    padding: 140px 229px 0;
+  }
+
+  .promo__title{
+    padding-top: 48px;
+    font-size: 40px;
+    line-height: 50px;
+    max-width: 680px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px){
+  .promo{
+    flex-direction: column;
+    padding-bottom: 30px;
+  }
+
+  .promo__logo{
+    padding: 70px 55px 0;
+    width: 210px;
+    height: 206px;
+  }
+
+  .promo__info{
+    justify-content: center;
+    align-items: center;
+  }
+
+  .promo__title{
+    max-width: 300px;
+    text-align: center;
+    padding-top: 44px;
+    font-size: 30px;
+    line-height: 38px;
+  }
+
+  .promo__subtitle{
+    max-width: 260px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 16px;
+  }
 }
