--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,9 +1,10 @@
 .search-form{
   display: flex;
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 1140px;
+  min-width: 320px;
   width: 100%;
-  padding: 70px 70px 69px;
+  padding: 70px 0 69px;
   box-sizing: border-box;
   border-bottom: 1px solid #E8E8E8;
   margin-bottom: 10px;
@@ -19,6 +20,7 @@
   border-radius: 5px;
   padding: 19px 0 19px 19px;
   max-width: 913px;
+  margin: 0;
 }
 
 .search-form__container{
@@ -32,7 +34,7 @@
 .search-form__lupa{
   width: 34px;
   height: 34px;
-  margin-right: 10px;
+  margin-right: 19px;
 }
 
 .search_form__input{
@@ -56,7 +58,39 @@ padding: 0 19px 0 0;
 height: 34px;
 }
 
-.search-forn__find{
+.search-form__find{
   width: 80px;
   height: 34px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .search-form{
+    padding: 80px 0 109px;
+    max-width: 708px;
+  }
+
+  .search-form__form{
+    max-width: 500px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .search-form{
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
+    padding: 80px 10px 0;
+  }
+
+  .search-form__container{
+    border-right: none;
+  }
+
+  .search-form__lupa{
+    display: none;
+  }
+
+  .search-form__form{
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  }
 }
