--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,7 @@
 .footer {
+  max-width: 1280px;
+  min-width: 320px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   padding: 79px 70px 20px;
