--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -15,8 +15,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  margin: 14px 14px 0;
-  padding-top: 14px;
+  padding: 14px 0 0 14px;
 }
 
 .moviesCard__title{
@@ -48,9 +47,14 @@
   height: 30px;
   border: none;
   padding-top: 19px;
+  padding-right: 14px;
 }
 
-.moviesCard__saved{
+.moviesCard__save_saved{
+  background-image: url('../../images/movies-saved.svg');
+}
+
+.moviesCard__delete{
 
 }
 
@@ -61,6 +65,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .moviesCard{
+    height: 258px;
     width: 339px;
     margin: 0 auto;
   }
