--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,10 +1,15 @@
 .promo {
+  background-color: #073042;
+}
+
+.promo__container{
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 70px;
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
   justify-content: space-between;
-  background-color: #073042;
-  padding: 0 70px;
   box-sizing: border-box;
   padding-bottom: 50px;
 }
@@ -51,7 +56,7 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
-  .promo{
+  .promo__container{
     flex-direction: column;
     padding-bottom: 76px;
   }
@@ -75,7 +80,7 @@
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px){
-  .promo{
+  .promo__container{
     flex-direction: column;
     padding-bottom: 30px;
   }
