Исправил глупую ошибку

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -71,7 +71,7 @@
   }
 }
 
-@media screen and (max-width: 320px){
+@media screen and (min-width: 320px) and (max-width:767px){
   .footer{
     padding: 79px 0 0;
   }
