--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -88,7 +88,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .moviesCard{
-    width: 300;
+    width: 300px;
+    height: 236px;
     margin: 0 auto;
   }
 
