--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -45,7 +45,7 @@
 }
 
 .search_form__input:focus{
-  outline: none;
+  outline: 1px solid #000;
 }
 
 .search-form__button{
@@ -57,12 +57,17 @@ padding: 0 19px 0 0;
 height: 34px;
 }
 
+.search-form__button:hover{
+  opacity: 80%;
+  cursor: pointer;
+}
+
 .search-form__find{
   width: 80px;
   height: 34px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px){
+@media screen and (min-width: 768px) and (max-width: 1280px){
   .search-form{
     padding: 80px 0 109px;
     max-width: 708px;
