--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,3 +1,9 @@
+.movies{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .movies-list{
   display: grid;
   align-content: center;
