--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,13 +40,17 @@
 }
 
 .preloader {
-    display: none; /* flex*/
+    display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
     z-index: 10;
     padding: 20px;
+}
+
+.preloader_dslb {
+    display: none;
 }
 
 .preloader__container {
