--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -17,6 +17,18 @@
   width: 100%;
 }
 
+.movies-error{
+  color: red;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.movies-error_dslb{
+  display: none;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1280px) {
   .movies-list{
     max-width: 708px;
