--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -99,6 +99,16 @@ height: 34px;
   }
 }
 
+.search-form__error{
+  font-family: 'Inter';
+  font-size: 11px;
+  line-height: 13px;
+  font-weight: 400;
+  color: #FF3055;
+  position: absolute;
+  margin-bottom: -100px;  
+}
+
 .chechbox{
   display: flex;
   justify-content: center;
